src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__cast_numeric_to_float64.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(\n    sqlname = \"numeric_to_double\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastFloat64ToNumeric(None)),\n    is_monotone = true\n)]\npub fn cast_numeric_to_float64(a: Numeric) -> Result<f64, EvalError> {\n    let i = a.to_string().parse::<f64>().unwrap();\n    if i.is_infinite() {\n        Err(EvalError::Float64OutOfRange(i.to_string().into()))\n    } else {\n        Ok(i)\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastNumericToFloat64;
impl crate::func::EagerUnaryFunc for CastNumericToFloat64 {
    type Input<'a> = Numeric;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_numeric_to_float64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastFloat64ToNumeric(None))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastNumericToFloat64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("numeric_to_double")
    }
}
pub fn cast_numeric_to_float64(a: Numeric) -> Result<f64, EvalError> {
    let i = a.to_string().parse::<f64>().unwrap();
    if i.is_infinite() {
        Err(EvalError::Float64OutOfRange(i.to_string().into()))
    } else {
        Ok(i)
    }
}
